--- a/index.html
+++ b/index.html
@@ -115,6 +115,30 @@ nav ul.t-nav li a:hover {
   text-shadow: 0 0 5px rgba(255,255,255,0.7);
 }
 
+/* 下方四個按鈕，對齊上方 T 字導覽 */
+.bottom-buttons {
+  width: 60%; /* 與 nav 一樣寬 */
+  margin: 40px auto 0 auto;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+.bottom-buttons button {
+  flex: 1; /* 每個按鈕自動平分 */
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: bold;
+  border: 2px solid #fff;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.15);
+  color: #fff;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.bottom-buttons button:hover {
+  background: rgba(255, 255, 255, 0.3);
+}
+
 /* 玻璃彈窗 */
 .modal {
   position: fixed;
@@ -199,8 +223,8 @@ nav ul.t-nav li a:hover {
   cursor: pointer;
 }
 .contact-form button#submitBtn {
-  background-color: rgba(255, 255, 255, 0.85); /* 半透明白色 */
-  color: #111; /* 接近黑色，但不死黑 */
+  background-color: rgba(255, 255, 255, 0.85);
+  color: #111;
 }
 .contact-form button#resetBtn {
   background: #000;
@@ -270,6 +294,14 @@ nav ul.t-nav li a:hover {
     </ul>
   </nav>
 </header>
+
+<!-- 下方四個按鈕 -->
+<div class="bottom-buttons">
+  <button onclick="openModal('intro')">關於佳咊</button>
+  <button onclick="openModal('work')">服務內容</button>
+  <button onclick="openModal('about')">產品介紹</button>
+  <button onclick="openModal('contact')">聯絡我們</button>
+</div>
 
 <div id="overlay"></div>
 
